// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's role was
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' roles were
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's permission was
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's role was
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's permission was
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' roles were
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's permission was
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's permission was
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's permission was
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' permissions were
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's role was
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' permissions were
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' roles were
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' permissions were
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' permissions were
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' permissions were
            updated across your team's repositories.
          </zalert-stub>
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's role was
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' roles were
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null,"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"repoCollaboratorUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":0} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":1} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            1
            user's role was
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":12} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <zalert-stub type=\\"info\\" class=\\"mx-4\\">
            12
            users' roles were
            updated in your team.
          </zalert-stub>
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {"teamMemberRoleUpdatedCount":null} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;

exports[`[[ ConfirmSyncModal ]] renders ConfirmSyncModal modal with all props: {} 1`] = `
"<zmodal-stub title=\\"Confirm and Sync\\" width=\\"base\\" closeafterprimaryaction=\\"true\\" primaryactiontype=\\"primary\\" showheaderborder=\\"true\\">
  <div class=\\"px-4 pt-5\\">
    <div class=\\"mb-6\\">
      <p class=\\"text-sm leading-6 mb-2.5 text-vanilla-300\\">
        This operation will sync your team's access control settings from
        GitHub. This has the following side-effects:
      </p>
      <ul class=\\"space-y-6 text-sm text-vanilla-300\\">
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Role of some members in your team on DeepSource will get updated as configured on
              GitHub. This may result in your team's occupied seat count being
              affected.
            </span>
          </div>
          <!---->
        </li>
        <li class=\\"space-y-2.5\\">
          <div class=\\"flex items-baseline gap-x-1.5\\">
            <zicon-stub icon=\\"arrow-right\\" size=\\"x-small\\" position=\\"\\" color=\\"vanilla-400\\" class=\\"flex-shrink-0\\"></zicon-stub> <span>
              Collaborators will be added or updated on each repository as configured on
              GitHub.
            </span>
          </div>
          <!---->
        </li>
      </ul>
    </div>
    <zcheckbox-stub label=\\"Override changes made on DeepSource\\" name=\\"\\" value=\\"\\" truevalue=\\"true\\" modelvalue=\\"true\\" size=\\"small\\" class=\\"cursor-pointer text-vanilla-400 border-ink-200 pt-3 border-t\\"></zcheckbox-stub>
  </div>
</zmodal-stub>"
`;
